Disable kernel mitigations + warning message, bump azahar+faudio

--- a/board/spacemit/k1/linux-defconfig.config
+++ b/board/spacemit/k1/linux-defconfig.config
@@ -112,6 +112,7 @@ CONFIG_TICK_CPU_ACCOUNTING=y
 # end of CPU/Task time and stats accounting
 
 CONFIG_CPU_ISOLATION=y
+CONFIG_CPU_MITIGATIONS=n
 
 #
 # RCU Subsystem
