--- a/board/x86_64/boot/grub.cfg
+++ b/board/x86_64/boot/grub.cfg
@@ -3,7 +3,7 @@ set timeout="1"
 
 menuentry "REG-Linux (normal)" {
     echo Booting REG-Linux... (grub2)
-    linux /boot/linux label=REGLINUX quiet splash mitigations=off
+    linux /boot/linux label=REGLINUX quiet splash
     initrd /boot/initrd.lz4
 }
 
