--- a/board/x86_64/boot/syslinux.cfg
+++ b/board/x86_64/boot/syslinux.cfg
@@ -13,7 +13,7 @@ LABEL REGLINUX
 	MENU LABEL REG-Linux (^normal)
 	MENU DEFAULT
 	LINUX /boot/linux
-	APPEND label=REGLINUX quiet splash mitigations=off
+	APPEND label=REGLINUX quiet splash
 	INITRD /boot/initrd.lz4
 
 LABEL verbose
