--- a/board/x86_64/linux_x86_64-defconfig.config
+++ b/board/x86_64/linux_x86_64-defconfig.config
@@ -521,7 +521,7 @@ CONFIG_CC_HAS_RETURN_THUNK=y
 CONFIG_CC_HAS_ENTRY_PADDING=y
 CONFIG_FUNCTION_PADDING_CFI=11
 CONFIG_FUNCTION_PADDING_BYTES=16
-# CONFIG_CPU_MITIGATIONS is not set
+CONFIG_CPU_MITIGATIONS=n
 CONFIG_ARCH_HAS_ADD_PAGES=y
 
 #
