Make evsieve conditional

--- a/package/batocera/controllers/guncon/Config.in
+++ b/package/batocera/controllers/guncon/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_GUNCON
 	bool "guncon"
 	select BR2_PACKAGE_BATOCERA_GUN_CALIBRATOR
+	select BR2_PACKAGE_EVSIEVE
 
 	help
 	  guncon support
