--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -89,7 +89,6 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_BTRFS_PROGS			# btrfs
 
 	select BR2_PACKAGE_PM_UTILS			# suspend
-	select BR2_PACKAGE_EVSIEVE			if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770 # linux tool to manipulate events (like joining them)
 	select BR2_PACKAGE_INPUTPLUMBER			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY # userspace tool to remap x86 handhelds keyboard to a proper gamepad
 	select BR2_PACKAGE_UTIL_LINUX_LIBMOUNT		# for util-linux compilation to work (so, may be removed in the future)
 	select BR2_PACKAGE_FBDUMP			# tool to capture snapshots from the Linux kernel framebuffer device and write them out as a PPM file
@@ -162,15 +161,15 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_XPAD_NOONE				if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # xbox receiver (require linux >= 4.15)
 	select BR2_PACKAGE_XPADNEO				if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # xbox receiver (require linux >= 4.18)
 	select BR2_PACKAGE_WII_U_GC_ADAPTER			if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # wii-u-gc-adapter
-	select BR2_PACKAGE_WIIMOTES_RULES			if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # wiimotes
+	select BR2_PACKAGE_WIIMOTES_RULES			if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA && !BR2_PACKAGE_SYSTEM_TARGET_H700 # wiimotes
 	select BR2_PACKAGE_WIIMOTE_3RDPARTY			if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # some non official wiimotes
 	select BR2_PACKAGE_XWIIMOTE				if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # a tool to analye wiimote events (mainly to debug, but helps and is funny)
-	select BR2_PACKAGE_BATOCERA_GUNS			if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_RK3128 && !BR2_PACKAGE_SYSTEM_TARGET_CHA
-	select BR2_PACKAGE_BATOCERA_WHEEL_CALIBRATOR		if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_RK3128 && !BR2_PACKAGE_SYSTEM_TARGET_CHA
+	select BR2_PACKAGE_BATOCERA_GUNS			if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_RK3128 && !BR2_PACKAGE_SYSTEM_TARGET_CHA && !BR2_PACKAGE_SYSTEM_TARGET_H700
+	select BR2_PACKAGE_BATOCERA_WHEEL_CALIBRATOR		if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_RK3128 && !BR2_PACKAGE_SYSTEM_TARGET_H700 && !BR2_PACKAGE_SYSTEM_TARGET_CHA
 	select BR2_PACKAGE_NEW_LG4FF				if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_RK3128 && !BR2_PACKAGE_SYSTEM_TARGET_CHA && !BR2_PACKAGE_SYSTEM_TARGET_H700 && !BR2_PACKAGE_SYSTEM_TARGET_S812 # Improved Linux module driver for Logitech driving wheels (the lg4ff is disabled in kernels)
 	select BR2_PACKAGE_HID_NX				if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # updated nintendo switch controller driver, requires kernel > 4.4
 	select BR2_PACKAGE_JOYCOND				if BR2_PACKAGE_HID_NX # nintendo switch joycon daemon (requires hid-nx)
-	select BR2_PACKAGE_JAMMASD				if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA
+	select BR2_PACKAGE_JAMMASD				if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_H700 && !BR2_PACKAGE_SYSTEM_TARGET_CHA
 	select BR2_PACKAGE_XARCADE2JSTICK			if !BR2_mipsel && !BR2_PACKAGE_SYSTEM_TARGET_RK3326 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # keyboard events of the Xarcade Tankstick
 
 	# Case
