Split source ports (requires original game data), and "full" games (free data bundled or in content downloader)

--- a/Config.in
+++ b/Config.in
@@ -197,12 +197,9 @@ endmenu
 endmenu
 
 menu "Ports"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/abuse/Config.in"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/abuse-data/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/augustus/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/bstone/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/cannonball/Config.in"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/cdogs/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/cgenius/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/corsixth/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/devilutionx/Config.in"
@@ -216,8 +213,6 @@ menu "Ports"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/fheroes2/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/gemrb/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/gzdoom/Config.in"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/hcl/Config.in"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/hurrican/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/ioquake3/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/iortcw/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/jazz2-native/Config.in"
@@ -225,14 +220,11 @@ menu "Ports"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/openlara/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/openmw/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/raze/Config.in"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/sdlpop/Config.in"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/sonic3-air/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/sonic2013/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/soniccd/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/sonic-mania/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/taradino/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/theforceengine/Config.in"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/tyrian/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/uqm/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/xash3d/xash3d-fwgs/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/xash3d/hlsdk-xash3d/Config.in"
@@ -241,14 +233,29 @@ menu "Ports"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/yquake2/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/vcmi/Config.in"
 menu "Libretro"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/libretro/libretro-mrboom/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/libretro/libretro-nxengine/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/libretro/libretro-prboom/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/libretro/libretro-reminiscence/Config.in"
-	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/libretro/libretro-superbroswar/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/libretro/libretro-tyrquake/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/libretro/libretro-xrick/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/libretro/libretro-zc210/Config.in"
+endmenu
+endmenu
+
+menu "Games"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/abuse/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/abuse-data/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/cdogs/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/hcl/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/hurrican/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/ltris2/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/lbreakouthd/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/sdlpop/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/sonic3-air/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/tyrian/Config.in"
+menu "Libretro"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/libretro/libretro-mrboom/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/games/libretro/libretro-superbroswar/Config.in"
 endmenu
 endmenu
 
