--- a/package/controllers/pads/db9-gpio-rpi/Config.in
+++ b/package/controllers/pads/db9-gpio-rpi/Config.in
@@ -1,4 +1,4 @@
 config BR2_PACKAGE_DB9_GPIO_RPI
-	bool "db9 gpio driver"
+	bool "db9-gpio-rpi"
 	help
 	  Kernel module to support db9 joysticks on gpios
