WIP T-Head 1520 support

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -226,6 +226,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						    BR2_PACKAGE_SYSTEM_TARGET_SM8250	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_SM8550	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_JH7110	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_TH1520	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_K1
 
 	# compression tools
