--- a/package/ports/yquake2/yquake2-client/Config.in
+++ b/package/ports/yquake2/yquake2-client/Config.in
@@ -1,6 +1,6 @@
 config BR2_PACKAGE_YQUAKE2_CLIENT
 	bool "yquake2"
-	select BR2_PACKAGE_SDL2
+	depends on BR2_PACKAGE_SDL2 || BR2_PACKAGE_SDL3
 	select BR2_PACKAGE_LIBCURL
 	select BR2_PACKAGE_YQUAKE2_XATRIX
 
