--- a/custom/package/llvm-project/llvm/Config.in
+++ b/custom/package/llvm-project/llvm/Config.in
@@ -25,7 +25,7 @@ config BR2_PACKAGE_LLVM
 	depends on BR2_USE_WCHAR # std::wstring
 	depends on BR2_HOST_GCC_AT_LEAST_7 # host-llvm
 	# REG
-	select BR2_PACKAGE_HOST_LLVM_CMAKE
+	select BR2_PACKAGE_HOST_LLVM_CMAKE if BR2_PACKAGE_LLVM_BUILD_FROM_SOURCE
 	help
 	  The LLVM Project is a collection of modular and reusable
 	  compiler and toolchain technologies.
