--- a/package/gpu/img-gpu-powervr/Config.in
+++ b/package/gpu/img-gpu-powervr/Config.in
@@ -19,7 +19,8 @@ config BR2_PACKAGE_IMG_GPU_POWERVR
 	select BR2_PACKAGE_IMG_MESA3D
 	select BR2_PACKAGE_IMG_MESA3D_GBM
 	select BR2_PACKAGE_IMG_MESA3D_OPENGL_EGL
-	select BR2_PACKAGE_IMG_MESA3D_OPENGL_GLX
+	select BR2_PACKAGE_IMG_MESA3D_OPENGL_GLES
+	select BR2_PACKAGE_IMG_MESA3D_OPENGL_GLX		if !BR2_PACKAGE_SYSTEM_TARGET_K1
 	select BR2_PACKAGE_IMG_MESA3D_GALLIUM_DRIVER_PVR
 	select BR2_PACKAGE_WAYLAND
 	help
