--- a/package/gpu/img-mesa3d/Config.in
+++ b/package/gpu/img-mesa3d/Config.in
@@ -225,11 +225,11 @@ config BR2_PACKAGE_PROVIDES_LIBGL
 config BR2_PACKAGE_PROVIDES_LIBEGL
 	default "img-mesa3d" if BR2_PACKAGE_IMG_MESA3D_OPENGL_EGL && !BR2_PACKAGE_LIBGLVND
 
-config BR2_PACKAGE_PROVIDES_LIBGLES
-	default "img-mesa3d" if BR2_PACKAGE_IMG_MESA3D_OPENGL_ES && !BR2_PACKAGE_LIBGLVND
+#config BR2_PACKAGE_PROVIDES_LIBGLES
+#	default "img-mesa3d" if BR2_PACKAGE_IMG_MESA3D_OPENGL_ES && !BR2_PACKAGE_LIBGLVND
 
-config BR2_PACKAGE_PROVIDES_LIBOPENCL
-	default "img-mesa3d" if BR2_PACKAGE_IMG_MESA3D_OPENCL
+#config BR2_PACKAGE_PROVIDES_LIBOPENCL
+#	default "img-mesa3d" if BR2_PACKAGE_IMG_MESA3D_OPENCL
 
 endif # BR2_PACKAGE_IMG_MESA3D
 
