moved: xpadneo to pads

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -174,7 +174,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 
 	# Case
 	select BR2_PACKAGE_ELEMENT14_PI_DESKTOP		if BR2_PACKAGE_SYSTEM_TARGET_BCM2836 || BR2_PACKAGE_SYSTEM_TARGET_BCM2837 # rpi2/rpi3
-	select BR2_PACKAGE_GPICASE			if BR2_PACKAGE_SYSTEM_TARGET_BCM2835 || BR2_PACKAGE_SYSTEM_TARGET_BCM2836 || BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # retroflag gpicase
+	select BR2_PACKAGE_GPICASE			if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY && !BR2_PACKAGE_SYSTEM_TARGET_BCM2712 # retroflag gpicase
 	select BR2_PACKAGE_ROSHAMBO			if BR2_PACKAGE_SYSTEM_TARGET_RK3399 # roshambo case
 	select BR2_PACKAGE_RPIGPIOSWITCH		if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY # gpio switchs
 	select BR2_PACKAGE_RETROGAME			if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY # gpio pads
@@ -254,10 +254,10 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_DB9_GPIO_RPI					if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY
 	select BR2_PACKAGE_GAMECON_GPIO_RPI				if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY
 	select BR2_PACKAGE_MK_ARCADE_JOYSTICK_RPI			if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY
+	select BR2_PACKAGE_PYTHON3_GPIOD				if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY
 	select BR2_PACKAGE_PYTHON_RPI_GPIO				if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY && !BR2_PACKAGE_SYSTEM_TARGET_BCM2712
 	select BR2_PACKAGE_PYTHON_GPIOZERO				if BR2_PACKAGE_SYSTEM_TARGET_BCM2835 || BR2_PACKAGE_SYSTEM_TARGET_BCM2836
-	select BR2_PACKAGE_PYTHON_ADAFRUIT_CIRCUITPYTHON_WS2801		if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_BCM2712
-	select BR2_PACKAGE_PYTHON3_GPIOD				if BR2_PACKAGE_SYSTEM_TARGET_BCM2712
+	select BR2_PACKAGE_PYTHON_ADAFRUIT_CIRCUITPYTHON_WS2801		if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY && !BR2_PACKAGE_SYSTEM_TARGET_BCM2712
 
 	# GPIO kernel driver
 	select BR2_PACKAGE_LIBGPIOD		if BR2_PACKAGE_SYSTEM_TARGET_BCM2712	|| \
