--- a/board/reglinux/linux-defconfig-reglinux.config
+++ b/board/reglinux/linux-defconfig-reglinux.config
@@ -152,3 +152,6 @@ CONFIG_MODULE_COMPRESS_XZ=n
 # Kernel Performance Events And Counters
 #
 CONFIG_PERF_EVENTS=y
+
+# Disable kernel mitigations
+CONFIG_CPU_MITIGATIONS=n
