--- a/board/broadcom/bcm2711/linux-broadcom64-current.config
+++ b/board/broadcom/bcm2711/linux-broadcom64-current.config
@@ -107,12 +107,14 @@ CONFIG_BPF_JIT_DEFAULT_ON=y
 # CONFIG_BPF_LSM is not set
 # end of BPF subsystem
 
+CONFIG_PREEMPT_BUILD=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
-# CONFIG_PREEMPT is not set
-CONFIG_PREEMPT_RT=y
+CONFIG_PREEMPT=y
+# CONFIG_PREEMPT_RT is not set
 CONFIG_PREEMPT_COUNT=y
 CONFIG_PREEMPTION=y
+# CONFIG_PREEMPT_DYNAMIC is not set
 
 #
 # CPU/Task time and stats accounting
@@ -145,8 +147,6 @@ CONFIG_TASKS_RUDE_RCU=y
 CONFIG_TASKS_TRACE_RCU=y
 CONFIG_RCU_STALL_COMMON=y
 CONFIG_RCU_NEED_SEGCBLIST=y
-CONFIG_RCU_BOOST=y
-CONFIG_RCU_BOOST_DELAY=500
 # end of RCU Subsystem
 
 CONFIG_IKCONFIG=m
@@ -451,7 +451,6 @@ CONFIG_ARCH_DEFAULT_CRASH_DUMP=y
 # CONFIG_XEN is not set
 CONFIG_ARCH_FORCE_MAX_ORDER=10
 CONFIG_UNMAP_KERNEL_AT_EL0=y
-CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_RODATA_FULL_DEFAULT_ENABLED=y
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
@@ -552,6 +551,7 @@ CONFIG_DMI=y
 # Power management options
 #
 # CONFIG_SUSPEND is not set
+# CONFIG_HIBERNATION is not set
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_CLK=y
@@ -636,7 +636,7 @@ CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 # CONFIG_NVHE_EL2_DEBUG is not set
 # CONFIG_PTDUMP_STAGE2_DEBUGFS is not set
-CONFIG_CPU_MITIGATIONS=y
+CONFIG_CPU_MITIGATIONS=n
 
 #
 # General architecture-dependent options
@@ -712,6 +712,7 @@ CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_ARCH_WANTS_EXECMEM_LATE=y
 CONFIG_HAVE_SOFTIRQ_ON_OWN_STACK=y
+CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS=18
@@ -843,6 +844,7 @@ CONFIG_MQ_IOSCHED_KYBER=y
 
 CONFIG_PREEMPT_NOTIFIERS=y
 CONFIG_ASN1=y
+CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
@@ -850,6 +852,7 @@ CONFIG_LOCK_SPIN_ON_OWNER=y
 CONFIG_ARCH_USE_QUEUED_SPINLOCKS=y
 CONFIG_QUEUED_SPINLOCKS=y
 CONFIG_ARCH_USE_QUEUED_RWLOCKS=y
+CONFIG_QUEUED_RWLOCKS=y
 CONFIG_ARCH_HAS_NON_OVERLAPPING_ADDRESS_SPACE=y
 CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
 CONFIG_FREEZER=y
@@ -938,6 +941,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_MEMORY_FAILURE is not set
 CONFIG_ARCH_WANTS_THP_SWAP=y
+# CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUGFS is not set
 # CONFIG_CMA_SYSFS is not set
@@ -2030,6 +2034,7 @@ CONFIG_MTD_BLOCK=m
 # CONFIG_SSFDC is not set
 # CONFIG_SM_FTL is not set
 # CONFIG_MTD_OOPS is not set
+# CONFIG_MTD_SWAP is not set
 # CONFIG_MTD_PARTITIONED_MASTER is not set
 
 #
@@ -3987,7 +3992,7 @@ CONFIG_SENSORS_AHT10=m
 # CONFIG_SENSORS_AS370 is not set
 # CONFIG_SENSORS_ASC7621 is not set
 # CONFIG_SENSORS_ASUS_ROG_RYUJIN is not set
-# CONFIG_SENSORS_AXI_FAN_CONTROL is not set
+CONFIG_SENSORS_AXI_FAN_CONTROL=m
 # CONFIG_SENSORS_ATXP1 is not set
 # CONFIG_SENSORS_CHIPCAP2 is not set
 # CONFIG_SENSORS_CORSAIR_CPRO is not set
@@ -4011,7 +4016,7 @@ CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_IIO_HWMON=m
 # CONFIG_SENSORS_IT87 is not set
 CONFIG_SENSORS_JC42=m
-# CONFIG_SENSORS_POWERZ is not set
+CONFIG_SENSORS_POWERZ=m
 # CONFIG_SENSORS_POWR1220 is not set
 # CONFIG_SENSORS_LINEAGE is not set
 # CONFIG_SENSORS_LTC2945 is not set
@@ -5370,11 +5375,11 @@ CONFIG_CHARLCD_BL_FLASH=y
 # CONFIG_HT16K33 is not set
 # CONFIG_MAX6959 is not set
 # CONFIG_SEG_LED_GPIO is not set
-CONFIG_DRM=m
+CONFIG_DRM=y
 CONFIG_DRM_MIPI_DBI=m
 CONFIG_DRM_MIPI_DSI=y
 # CONFIG_DRM_DEBUG_MM is not set
-CONFIG_DRM_KMS_HELPER=m
+CONFIG_DRM_KMS_HELPER=y
 # CONFIG_DRM_PANIC is not set
 # CONFIG_DRM_DEBUG_DP_MST_TOPOLOGY_REFS is not set
 # CONFIG_DRM_DEBUG_MODESET_LOCK is not set
@@ -5612,7 +5617,7 @@ CONFIG_DRM_GUD=m
 # CONFIG_DRM_SSD130X is not set
 # CONFIG_DRM_POWERVR is not set
 # CONFIG_DRM_WERROR is not set
-CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=m
+CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
 
 #
 # Frame buffer Devices
@@ -6684,7 +6689,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BCM2835_MMC=y
 CONFIG_MMC_BCM2835_DMA=y
 CONFIG_MMC_BCM2835_PIO_DMA_BARRIER=2
-CONFIG_MMC_BCM2835_SDHOST=y
+# CONFIG_MMC_BCM2835_SDHOST is not set
 # CONFIG_MMC_DEBUG is not set
 # CONFIG_MMC_ARMMMCI is not set
 CONFIG_MMC_SDHCI=y
@@ -6791,6 +6796,7 @@ CONFIG_LEDS_TRIGGER_ONESHOT=y
 # CONFIG_LEDS_TRIGGER_MTD is not set
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_LEDS_TRIGGER_BACKLIGHT=y
+# CONFIG_LEDS_TRIGGER_CPU is not set
 # CONFIG_LEDS_TRIGGER_ACTIVITY is not set
 # CONFIG_LEDS_TRIGGER_GPIO is not set
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
@@ -8319,6 +8325,7 @@ CONFIG_NFS_V2=m
 CONFIG_NFS_V3=m
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=m
+# CONFIG_NFS_SWAP is not set
 CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_2=y
 CONFIG_PNFS_FILE_LAYOUT=m
@@ -9085,7 +9092,9 @@ CONFIG_LOCK_DEBUGGING_SUPPORT=y
 # CONFIG_LOCK_STAT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_DEBUG_SPINLOCK is not set
+# CONFIG_DEBUG_MUTEXES is not set
 # CONFIG_DEBUG_WW_MUTEX_SLOWPATH is not set
+# CONFIG_DEBUG_RWSEMS is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_DEBUG_ATOMIC_SLEEP is not set
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
