WIP MTP + bump ShadPS4

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -215,7 +215,13 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						    BR2_PACKAGE_SYSTEM_TARGET_ASAHI	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_BCM2711	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_BCM2712	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_H616      || \
+						    BR2_PACKAGE_SYSTEM_TARGET_H700      || \
+						    BR2_PACKAGE_SYSTEM_TARGET_RK3326    || \
+						    BR2_PACKAGE_SYSTEM_TARGET_RK3568    || \
 						    BR2_PACKAGE_SYSTEM_TARGET_RK3588	|| \
+						    BR2_PACKAGE_SYSTEM_TARGET_S905GEN3  || \
+						    BR2_PACKAGE_SYSTEM_TARGET_S922X     || \
 						    BR2_PACKAGE_SYSTEM_TARGET_SM8250	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_SM8550	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_JH7110	|| \
@@ -280,7 +286,7 @@ config BR2_PACKAGE_SYSTEM_DEBUG
 	select BR2_ENABLE_DEBUG
 	select BR2_PACKAGE_TMUX
 	select BR2_PACKAGE_STRACE
-	select BR2_PACKAGE_VALGRIND                     if !BR2_arm
+	select BR2_PACKAGE_VALGRIND                     if !BR2_arm && !BR2_riscv
 	select BR2_BINUTILS_GPROFNG
 	select BR2_PACKAGE_GDB
 	select BR2_PACKAGE_GDB_DEBUGGER
